# stoffel-networking

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: release.yml
benches/: network_benchmarks.rs
include/: stoffelnet.h
src/: ffi.rs  lib.rs
src/network_stuff/: mod.rs
src/network_utils/: mod.rs
src/transports/: ice.rs  ice_agent.rs  mod.rs  net_envelope.rs  quic.rs  stun.rs
tests/: quic_integration.rs  test_ffi.py
tests/nat_simulation/: Dockerfile.peer  Dockerfile.signaling  Dockerfile.stun  docker-compose.direct.yml  docker-compose.symmetric.yml  docker-compose.yml  run_test.sh
tests/nat_simulation/src/: nat_test_peer.rs  signaling_server.rs  stun_server.rs
