[package]
name = "stoffelnet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
quinn = "0.11.8"
rustls = "0.23.29"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
rcgen = "0.14.2"
ark-ff = "0.5.0"
thiserror = "2.0.12"
async-trait = "0.1.88"
bincode = "1.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "7.0.0-rc2"
rand = "0.8"
byteorder = "1.5"

[[bin]]
name = "nat_signaling_server"
path = "tests/nat_simulation/src/signaling_server.rs"

[[bin]]
name = "nat_test_peer"
path = "tests/nat_simulation/src/nat_test_peer.rs"

[[bin]]
name = "nat_stun_server"
path = "tests/nat_simulation/src/stun_server.rs"
