[package]
name = "stoffelnet"
version = "0.1.0"
edition = "2021"
authors = ["Stoffel Labs Inc <contact@stoffelmpc.com>"]
homepage = "https://stoffelmpc.com"
repository = "https://github.com/Stoffel-Labs/stoffel-networking.git"
documentation = "https://docs.rs/stoffelnet"
categories = ["cryptography", "network-programming"]
keywords = ["mpc", "quic", "networking", "p2p", "nat-traversal"]
license = "Apache-2.0"
readme = "README.md"
description = "QUIC-based P2P networking library for MPC applications with NAT traversal support"


[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
quinn = "0.11.8"
rustls = "0.23.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12", features = ["std"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "test-util"] }
uuid = { version = "1.17.0", features = ["v4"] }
rcgen = "0.14.2"
ark-ff = "0.5.0"
thiserror = "2.0.12"
async-trait = "0.1.88"
bincode = "1.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "7.0.0-rc2"
x509-parser = "0.16"
rand = "0.9.2"
byteorder = "1.5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
